ARV Fast Track Form updated alignment

--- a/omod/src/main/webapp/resources/htmlforms/hiv/artFastTrack.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/artFastTrack.html
@@ -177,8 +177,11 @@
 
                     <td>Phone Number:<strong> <lookup expression="fn.latestObs(160642).valueText"/></strong></td>
                 </tr>
-                <tr><br /><br /><br /><br />
-                    <td colspan="3" width="40" align="left"><strong>Other Medications Dispensed</strong></td>
+            </table>
+            <table>
+                <tr><br /></tr>
+                <tr>
+                    <td colspan="4" align="left"><strong>Other Medications Dispensed</strong></td>
 
                         <table cellspacing="0">
                             <tr>
